--- a/praias/styles/style.css
+++ b/praias/styles/style.css
@@ -138,6 +138,16 @@ section > h2 > a:hover{
     color: rgb(4, 194, 29);
 }
 
+section > img {
+    width: 600px;
+    padding: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.459);
+}
+
+@media (max-width: 750px){section > img {
+    width: 300px;
+}}
+
 section > p {
     box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.24);
     background-color: rgba(255, 255, 255, 0.295);
